@@ -1,3 +1,4 @@
+3/3/14 #14 bind added to linked functions in MoleculeCountNode
 3/3/14 #9 create arrow only for interactive graph indicators
 3/3/14 #7 change '**' to '^' for exponent operator in model.txt
 3/3/14 delete unused dropper-icon.png
